--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-
-
 <html>
 <head>
-
 <title>天一生水</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="description" content="天一生水英文翻译--onewater run">
@@ -180,7 +177,7 @@ body {
             
         });
     </script>
-       <a target="_blank" href="https://www.jiangyu.org" title="博客">
+       <a target="_blank" href="" title="博客">
             <i class="fas fa-blog"></i>
         </a>
        <a target="_blank" href="" title="">
@@ -194,9 +191,5 @@ body {
     </div>
 
 </div>
-
-
-			
-			
 </body>
 </html>
