--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="天一生水,onewater run">
 <link rel="icon" href="/onewaterrun.png"/>
 <link rel="stylesheet" href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel='stylesheet' id='font-misans-css'  href='https://font.sec.miui.com/font/css?family=MiSans:100,300,450,500,650:Chinese_Simplify,Latin&display=swap' type='text/css' media='screen' />
+<link rel='stylesheet' href='https://font.sec.miui.com/font/css?family=MiSans:100,300,450,500,650:Chinese_Simplify,Latin&display=swap' type='text/css' media='screen' />
 <style>
 html, body {
     width: 100%;
@@ -35,11 +35,11 @@ body {
     margin: 0 auto;
     padding-top: 100px;
     padding-bottom: 50px;
-	font-family: 'MiSans';
+    font-family: 'MiSans';
+    font-weight: 100;
     font-size: 64px;
     text-align: center;
-	color: #333333;
-	font-weight: 100;
+    color: #333333;
     background: url(background.png) no-repeat center bottom;
     background-size: 800px;
 }
