--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ body {
     min-height: 560px;
     min-width: 800px;
     font-family: 'MiSans';
+    font-weight: 100;
 }
 
 .main {
@@ -121,10 +122,7 @@ body {
         </a>
     </div>
 
-    <div class="footer">&copy; 2022 天一生水</div>
-	
-
-
+    <div class="footer">&copy; 2022 天一生水</div>	
 
 </div>
 </body>
