--- a/index.html
+++ b/index.html
@@ -115,10 +115,11 @@ body {
         <a target="_blank" href="" title="bookmark">
             <i class="fa fa-rss"></i>
         </a>
-        <a target="_blank" href="" title="OS X">
+        <a target="_blank" href="" title="">
             <i class="fa fa-code"></i>
         </a>
-        <a target="_blank" href="" title="Linux">
+        <a target="_blank" href="" title="Winxin">
+	   <i class="fa fa-weixin></i>
         </a>
     </div>
 
