--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
 <body>
 <div class="main">
     <div class="titleouter">
-        <div class="title"><img src="" width="96">onewater run</div>
+        <div class="title">onewater run</div>
     </div>
   <div class="download">
         <a target="_blank" href="" title="bookmark">
