--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {
             <i class="fa fa-code"></i>
         </a>
         <a target="_blank" href="" title="Winxin">
-	   <i class="fa fa-weixin></i>
+	   <i class="fa fa-weixin"></i>
         </a>
    </div>
     <div class="footer">&copy; 2022 天一生水</div>	
