--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ body {
     min-height: 560px;
     min-width: 800px;
     font-family: 'MiSans';
-    font-weight: 100;
 }
 
 .main {
@@ -93,6 +92,8 @@ body {
 
 .footer {
     font-size: 14px;
+    font-family: 'MiSans';
+    font-weight: 100;
     text-align: center;
     color: #CCCCCC;
     padding-bottom: 20px;
