--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body {
             <i class="fa fa-code"></i>
         </a>
         <a >
-	   <i class="fa fa-weixin"></i>
+	   <i class="fa fa-weixin" title="一蓑烟雨任平生"></i>
         </a>
    </div>
     <div class="footer">&copy; 2022 天一生水</div>	
