--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@ body {
    
    <svg aria-hidden="true" focusable="false" role="img" class="StyledOcticon-sc-1lhyyr-0 jYlbIx" viewBox="0 0 16 16" width="16" height="16" fill="currentColor" style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM8 0a8 8 0 100 16A8 8 0 008 0zm.5 4.75a.75.75 0 00-1.5 0v3.5a.75.75 0 00.471.696l2.5 1a.75.75 0 00.557-1.392L8.5 7.742V4.75z"></path></svg>
    <a href="https://time.is/China" id="time_is_link" rel="nofollow" style="text-decoration: none">UTC +8:</a>
-<span id="China_z43d" style="font-size:36px"></span>
+<span id="China_z43d"></span>
 <script src="//widget.time.is/t.js"></script>
 <script>
 time_is_widget.init({China_z43d:{}});
