--- a/index2.html
+++ b/index2.html
@@ -124,6 +124,11 @@ body {
     font-size: 14px;
 }
 
+.zuobiao a {
+    color: #cccccc;
+    text-decoration: none;
+}
+
     </style>
 </head>
 <body>
