--- a/index2.html
+++ b/index2.html
@@ -175,7 +175,7 @@ time_is_widget.init({China_z43d:{}});
    
    
    <div id="tcomment"></div>
-<script src="https://irils.gitee.io/irils-cdn/twikoo-irils/twikoo.all.min.js"></script>
+<script src="twikoo.all.min.js"></script>
 <script>
 twikoo.init({
   envId: 'https://twikoo.onewater.run/', // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
