--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@ body {
     font-size: 64px;
     text-align: center;
     color: #333333;
-    background: url(https://onewater.run/background.png) no-repeat center bottom;
+    background: url(/background.png) no-repeat center bottom;
     background-size: 800px;
 }
 
@@ -175,7 +175,7 @@ time_is_widget.init({China_z43d:{}});
    
    
    <div id="tcomment"></div>
-<script src="twikoo.all.min.js"></script>
+<script src="/twikoo.all.min.js"></script>
 <script>
 twikoo.init({
   envId: 'https://twikoo.onewater.run/', // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
