--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>天一生水</title>
 <meta name="description" content="天一生水,onewater run">
 <link rel="icon" href="/onewaterrun.png"/>
-<link rel="stylesheet" href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://kit.fontawesome.com/4f35910417.js" crossorigin="anonymous"></script>
 <link rel='stylesheet' href='https://font.sec.miui.com/font/css?family=MiSans:100,300,450,500,650:Chinese_Simplify,Latin&display=swap' type='text/css' media='screen' />
 <style>
 html, body {
