--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>天一生水</title>
 <meta name="description" content="天一生水,onewater run">
 <link rel="icon" href="/onewaterrun.png"/>
-<script src="https://kit.fontawesome.com/4f35910417.js" crossorigin="anonymous"></script>
+<script src="/2022.11.3.js" crossorigin="anonymous"></script>
 <link rel='stylesheet' href='https://font.sec.miui.com/font/css?family=MiSans:100,300,450,500,650:Chinese_Simplify,Latin&display=swap' type='text/css' media='screen' />
 <style>
 html, body {
