--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body {
 <svg aria-hidden="true" focusable="false" role="img" class="StyledOcticon-sc-1lhyyr-0 jYlbIx" viewBox="0 0 16 16" width="16" height="16" fill="currentColor" style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"><path fill-rule="evenodd" d="M11.536 3.464a5 5 0 010 7.072L8 14.07l-3.536-3.535a5 5 0 117.072-7.072v.001zm1.06 8.132a6.5 6.5 0 10-9.192 0l3.535 3.536a1.5 1.5 0 002.122 0l3.535-3.536zM8 9a2 2 0 100-4 2 2 0 000 4z"></path></svg> Guangzhou, China
    
 <svg aria-hidden="true" focusable="false" role="img" class="StyledOcticon-sc-1lhyyr-0 jYlbIx" viewBox="0 0 16 16" width="16" height="16" fill="currentColor" style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM8 0a8 8 0 100 16A8 8 0 008 0zm.5 4.75a.75.75 0 00-1.5 0v3.5a.75.75 0 00.471.696l2.5 1a.75.75 0 00.557-1.392L8.5 7.742V4.75z"></path></svg>
-UTC +8:
+<a href="" id="time_is_link" rel="nofollow" style="text-decoration: none"></a>UTC +8:</a>
 <span id="China_z43d">  </span>
 <!--<script src="//widget.time.is/t.js"></script>-->
 <script>
