--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ body {
     text-decoration: none;
 }
 .state span {
-    width: 60px;
-    display: flex;
+    width: 62px;
+    display: inline-block;
 }
 </style>
 </head>
