--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@ time_is_widget.init({China_z43d:{}});
 <!-- <script src="/twikoo.all.min.js"></script>-->
 <script>
 twikoo.init({
-  envId: 'https://tk.jiangyu.org/',
+  envId: 'https://twikoo.onewater.run/',
   el: '#tcomment',
 })
 </script>
    
 
-<div class="footer">&copy; 2022 天一生水</div>
+<div class="footer">&copy; 2023 天一生水</div>
 
 </div>
 </body>
