--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ time_is_widget.init({China_z43d:{}});
 <!-- <script src="/twikoo.all.min.js"></script>-->
 <script>
 twikoo.init({
-  envId: 'https://twikoo.onewater.run/',
+  envId: 'http://43.136.20.100:8081/',
   el: '#tcomment',
 })
 </script>
