--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@ time_is_widget.init({China_z43d:{}});
    
 
 <div id="tcomment"></div>
-<!-- <script src="https://cdn.staticfile.org/twikoo/1.6.8/twikoo.all.min.js"></script>-->
+<!-- <script src="https://cdn.jiangyu.org/cdn/twikoo.js"></script>-->
 <script>
 twikoo.init({
-  envId: 'http://43.136.20.100:8081/',
+  envId: 'https://twikoo.onewater.run/',
   el: '#tcomment',
 })
 </script>
