--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ time_is_widget.init({China_z43d:{}});
    
 <!--
 <div id="tcomment"></div>
-<!-- <script src="https://cdn.jiangyu.org/cdn/twikoo.js"></script>-->
+<script src="https://cdn.jiangyu.org/cdn/twikoo.js"></script>
 <script>
 twikoo.init({
   envId: 'https://twikoo.onewater.run/',
